# ohm_blue_bars

./: .gitignore
deprecated/ohm_exploration/: CMakeLists.txt  package.xml
deprecated/ohm_exploration/src/: FeatureCell.h  FindWall.h  Map.cpp  Partition.cpp  Ray.h  SearchArea.h  Target.h  target-stack-node.cpp  wall-finder-node.cpp
deprecated/ohm_frontier_exploration/: package.xml
deprecated/ohm_path_control/: CMakeLists.txt  package.xml
deprecated/ohm_path_control/config/: analyser.xml
deprecated/ohm_path_control/src/: PathControl.cpp
deprecated/ohm_path_plan/: CMakeLists.txt  package.xml
deprecated/ohm_path_plan/action/: MoveTo.action
deprecated/ohm_path_plan/launch/: semi_autonom.launch
deprecated/ohm_path_plan/src/: PathPlan.cpp  PathPlan_AStar.cpp  PathPlan_AStar.h
doc/architecture/: autonomy_architecture_v1.dia  readme.txt  stateMachine.dia
ohm_autonomy/: CMakeLists.txt  package.xml  package.xml~
ohm_autonomy_launch/: CMakeLists.txt  package.xml
ohm_autonomy_msgs/: CMakeLists.txt  package.xml
ohm_autonomy_msgs/msg/: MoveRobot.msg  PathControlInfo.msg  WallArray.msg
ohm_autonomy_msgs/srv/: PlanPaths.srv
ohm_autonomy_switch/: CMakeLists.txt  package.xml  plugin.xml
ohm_autonomy_switch/src/: AutonomySwitch.cpp  AutonomySwitch.h  autonomy_switch.cpp  autonomy_switch.ui
ohm_blue_bars/: CMakeLists.txt  package.xml
ohm_blue_bars/cfg/: BlueBars.cfg
ohm_blue_bars/launch/: blue_bar.launch  camera.launch
ohm_blue_bars/src/: Straight2D.cpp  Straight2D.h  blue_bar_node.cpp  hough_blue_bars.cpp
ohm_cat/: CMakeLists.txt  package.xml
ohm_cat/launch/: cat.launch
ohm_cat/src/: OhmCat.cpp  OhmCat.h  main.cpp
ohm_cortex/: CMakeLists.txt  package.xml  ui_main_window.h  viz
ohm_cortex/src/: GetTransformation.cpp  IState.h  VelMuxInterface.cpp  VelMuxInterface.h  ohm_georg_frontier_statemachine.cpp  ohm_simon_statemachine.cpp  ohm_statemachine.cpp
ohm_cortex/src/states/: Approach.cpp  ConfirmVictim.cpp  Drive.cpp  Drive.h  Explore.cpp  FoundVictimCandidate.cpp  FoundVictimCandidate.h  FrontierExplore.cpp  FrontierExplore.h  Init.cpp  Init.h  LookAtTarget.cpp  LookAtTarget.h  Manipulator.cpp  StatePing.cpp  StatePing.h  TargetStack.cpp  Teleoperated.h  TestFrontier.cpp  TestFrontier.h
ohm_cortex/src/viz/: Link.cpp  Node.cpp  Node.h  StateViz.h  main_window.hpp  moc_main_window.cxx  moc_main_window.cxx_parameters  viz_node.cpp
ohm_cortex/srv/: Force.srv
ohm_exploration/: CMakeLists.txt  package.xml
ohm_exploration/launch/: wall-finder.launch
ohm_exploration/src/: LeastSquare.cpp  Line.h  Partition.cpp  Partition.h  Ray.cpp  TargetFactory.cpp  Wall.cpp  Wall.h  mission-planner-node.cpp  target-stack-node.cpp  wall-finder-node.cpp
ohm_frontier_exploration/: CMakeLists.txt  package.xml
ohm_frontier_exploration/launch/: test.launch
ohm_frontier_exploration/src/: FrontierExplorationNode.cpp  FrontierExplorationNode.h
ohm_neg_obst/: CMakeLists.txt  package.xml
ohm_neg_obst/cfg/: ReconfigureHeightMapper.cfg
ohm_neg_obst/launch/: neg_obst.launch
ohm_neg_obst/src/: neg_obst_mapper.cpp
ohm_path_control/: CMakeLists.txt  package.xml
ohm_path_control/config/: controller.xml
ohm_path_control/launch/: default.launch
ohm_path_control/src/: PathControl.cpp  PathControl.h  main.cpp
ohm_path_plan/: CMakeLists.txt  package.xml
ohm_path_plan/launch/: default.launch
ohm_path_plan/src/: PathPlan.h  PathPlan_AStar.h  SemiAutonohm.h
ohm_path_repeat/: CMakeLists.txt  package.xml  plugin.xml
ohm_path_repeat/src/: GuiPathRepeat.cpp  GuiPathRepeat.h  path_repeat.ui
ohm_robocup/: CMakeLists.txt  package.xml
ohm_robocup/launch/: path_repeat.launch
ohm_robocup/src/: Frontier_basic.cpp  Frontier_basic.h  ObjectDetection.cpp  ObjectDetection.h  PathRepeat.cpp
src/ohm_autonomy/: CMakeLists.txt  package.xml
src/ohm_autonomy/msg/: PathControlInfo.msg  PathControlInfo.msg~  WallArray.msg
src/ohm_autonomy/srv/: GetTarget.srv
src/ohm_cortex/: CMakeLists.txt  package.xml
src/ohm_cortex/src/: Context.cpp  Context.h  GetTransformation.h  IState.h  StatePing.cpp  StatePing.h  StatePong.cpp  StatePong.h  Teleoperated.cpp  Teleoperated.h  ohm_simon_statemachine.cpp  ohm_statemachine.cpp
src/ohm_cortex/src/states/: Approach.cpp  Approach.h  ConfirmVictim.cpp  ConfirmVictim.h  Drive.cpp  Drive.h  Explore.cpp  Explore.h  FoundVictimCandidate.cpp  FoundVictimCandidate.h  FrontierExplore.cpp  FrontierExplore.h  Init.cpp  Inspect.cpp  Inspect.h  LookAtTarget.cpp  Manipulator.cpp  Manipulator.h  RejectVictim.cpp  RejectVictim.h  StatePing.cpp  StatePong.cpp  StatePong.h  TargetStack.cpp  TargetStack.h  Teleoperated.cpp  Teleoperated.h  TestFrontier.cpp  Waiting.cpp  Waiting.h
src/ohm_cortex/src/viz/: Link.h  Node.cpp  Node.h  StateViz.cpp  main_window.cpp  main_window.hpp
src/ohm_cortex/src/viz/ui/: main_window.ui
src/ohm_diarrhea/: CMakeLists.txt  package.xml
src/ohm_diarrhea/src/: GetTransformation.cpp  GetTransformation.h  diarrhea-node.cpp
src/ohm_exploration/: CMakeLists.txt  package.xml
src/ohm_exploration/launch/: wall-finder.launch
src/ohm_exploration/msg/: Wall.msg  WallArray.msg
src/ohm_exploration/src/: Cell.h  FeatureCell.h  FeatureMap.cpp  FeatureMap.h  FindWall.cpp  FindWall.h  Grid.cpp  Grid.h  LeastSquare.cpp  LeastSquare.h  Line.h  Map.cpp  Map.h  Partition.cpp  Partition.h  PartitionGrid.cpp  PartitionGrid.h  Pose.h  Ransac.cpp  Ransac.h  Ray.cpp  Ray.h  Rect.h  Sensor.h  SensorPublisher.cpp  SensorPublisher.h  Target.cpp  Target.h  TargetFactory.cpp  TargetFactory.h  Wall.cpp  Wall.h  exploration-node.cpp  goal-factory-node.cpp  map-roi-node.cpp  mission-planner-node.cpp  target-stack-node.cpp  wall-finder-node.cpp
src/ohm_exploration/srv/: GetTarget.srv  MarkTarget.srv
src/ohm_frontier_exploration/: CMakeLists.txt
src/ohm_frontier_exploration/cfg/: Exploration.cfg
src/ohm_frontier_exploration/launch/: explore.yaml  footprint.yaml  test.launch
src/ohm_frontier_exploration/src/: Frontier.h  tmp.cpp  (+8 more)
src/ohm_path_control/: CMakeLists.txt  package.xml
src/ohm_path_plan/: CMakeLists.txt  package.xml
(+41 files in other folders)
